# device-coap-c

./: .gitignore  Attribution.txt  CHANGELOG.md  Jenkinsfile  Makefile  OWNERS.md  README.md  ROADMAP.md  master
.github/: PULL_REQUEST_TEMPLATE.md
res/: configuration-native.toml  configuration.toml  configuration.yaml  example-datatype.yaml
res/devices/: d1.json  devices.json
res/profiles/: example-datatype.json
scripts/: CMakeLists_txt_patch  Dockerfile.alpine  Dockerfile.alpine-base  FindTinyDTLS_cmake_patch  build.sh  build_debug.sh  build_deps.sh  config_h_in_patch
src/c/: CMakeLists.txt  coap-client.c  coap-client.h  coap-server.c  coap-server.h  coap-util.c  coap-util.h  device-coap.c  device-coap.h
src/c/cmake/: FindLibcoap.cmake
